--- a/package.json
+++ b/package.json
@@ -14,6 +14,6 @@
     "tweetnacl-util": "^0.15.0"
   },
   "scripts": {
-    "start": "eslint src/*.js && nodemon src/app.js"
+    "start": "eslint src/*.js && node src/app.js"
   }
 }
