--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.0.0",
   "private": true,
   "dependencies": {
+    "@octokit/rest": "^15.2.6",
     "babel-preset-es2015": "^6.24.0",
     "body-parser": "^1.18.2",
     "dotenv": "^5.0.1",
@@ -10,7 +11,6 @@
     "eslint-config-airbnb": "^14.1.0",
     "eslint-plugin-import": "^2.2.0",
     "express": "^4.15.4",
-    "github": "^12.0.1",
     "tweetnacl": "^1.0.0",
     "tweetnacl-util": "^0.15.0"
   },
